--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   </header>
 
   <div id="main-container" class="container">
-    <section class="main-section mainSectionPort">
+    <section class="main-section">
       <h1>Portfolio</h1>
 
       <div class="work">
